--- a/ios/SmartChat/LaunchScreen.storyboard
+++ b/ios/SmartChat/LaunchScreen.storyboard
@@ -16,14 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Splash" translatesAutoresizingMaskIntoConstraints="NO" id="PsF-xe-3bX">
-                                <rect key="frame" x="82" y="410" width="211" height="103"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash" translatesAutoresizingMaskIntoConstraints="NO" id="PsF-xe-3bX">
+                                <rect key="frame" x="123" y="282" width="128" height="103"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ymn-mT-1DT"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ymn-mT-1DT" firstAttribute="bottom" secondItem="PsF-xe-3bX" secondAttribute="bottom" constant="282" id="8pG-uO-RqZ"/>
+                            <constraint firstItem="PsF-xe-3bX" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="GeL-vh-cuY"/>
+                            <constraint firstItem="PsF-xe-3bX" firstAttribute="top" secondItem="Ymn-mT-1DT" secondAttribute="top" constant="262" id="KvY-wc-3FL"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
